--- a/trim.3
+++ b/trim.3
@@ -25,7 +25,6 @@ following links:
 .IP "1." 3
 <gemini://harkadev.com/oss/>
 .IP "2." 3
-<https://harkadev.com/oss/>
-.SH SEE ALSO
+<https://harkadev.com/oss/> # SEE ALSO
 .PP
 \f[B]ISSPACE(2)\f[]
